// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchButton should match the snapshot when disabled 1`] = `
<div>
  <div
    style="cursor: not-allowed; opacity: 0.5;"
  >
    <input
      hidden=""
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="hidden"
    />
    <input
      checked=""
      disabled=""
      hidden=""
      name="Test Switch Button"
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="checkbox"
      value="on"
    />
    <button
      aria-checked="true"
      class="ngcc-tw-relative ngcc-tw-my-auto ngcc-tw-inline-flex ngcc-tw-h-6 ngcc-tw-w-11 ngcc-tw-flex-shrink-0 ngcc-tw-rounded-full ngcc-tw-border-2 ngcc-tw-border-transparent 
                    ngcc-tw-transition-colors ngcc-tw-duration-200 ngcc-tw-ease-in-out ngcc-tw-focus:outline-none ngcc-tw-focus:ring-2 ngcc-tw-focus:ring-green-500 ngcc-tw-focus:ring-offset-2
                    "
      data-checked=""
      data-disabled=""
      data-headlessui-state="checked disabled"
      data-testid="react-gdpr-cookie-consent-switch-button"
      disabled=""
      id="headlessui-switch-:r3:"
      role="switch"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ngcc-tw-pointer-events-none ngcc-tw-inline-block ngcc-tw-h-5 ngcc-tw-w-5 ngcc-tw-transform ngcc-tw-rounded-full ngcc-tw-bg-white ngcc-tw-shadow 
                    ngcc-tw-ring-0 ngcc-tw-transition ngcc-tw-duration-200 ngcc-tw-ease-in-out
                    ngcc-tw-translate-x-5"
      />
    </button>
  </div>
</div>
`;

exports[`SwitchButton should match the snapshot when not toggled 1`] = `
<div>
  <div>
    <input
      hidden=""
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="hidden"
    />
    <input
      hidden=""
      name="Test Switch Button"
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="checkbox"
      value="on"
    />
    <button
      aria-checked="false"
      class="ngcc-tw-relative ngcc-tw-my-auto ngcc-tw-inline-flex ngcc-tw-h-6 ngcc-tw-w-11 ngcc-tw-flex-shrink-0 ngcc-tw-rounded-full ngcc-tw-border-2 ngcc-tw-border-transparent 
                    ngcc-tw-transition-colors ngcc-tw-duration-200 ngcc-tw-ease-in-out ngcc-tw-focus:outline-none ngcc-tw-focus:ring-2 ngcc-tw-focus:ring-green-500 ngcc-tw-focus:ring-offset-2
                    ngcc-tw-cursor-pointer"
      data-headlessui-state=""
      data-testid="react-gdpr-cookie-consent-switch-button"
      id="headlessui-switch-:r2:"
      role="switch"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ngcc-tw-pointer-events-none ngcc-tw-inline-block ngcc-tw-h-5 ngcc-tw-w-5 ngcc-tw-transform ngcc-tw-rounded-full ngcc-tw-bg-white ngcc-tw-shadow 
                    ngcc-tw-ring-0 ngcc-tw-transition ngcc-tw-duration-200 ngcc-tw-ease-in-out
                    ngcc-tw-translate-x-0"
      />
    </button>
  </div>
</div>
`;

exports[`SwitchButton should match the snapshot with minimal configuration 1`] = `
<div>
  <div>
    <input
      hidden=""
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="hidden"
    />
    <input
      checked=""
      hidden=""
      name="Test Switch Button"
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="checkbox"
      value="on"
    />
    <button
      aria-checked="true"
      class="ngcc-tw-relative ngcc-tw-my-auto ngcc-tw-inline-flex ngcc-tw-h-6 ngcc-tw-w-11 ngcc-tw-flex-shrink-0 ngcc-tw-rounded-full ngcc-tw-border-2 ngcc-tw-border-transparent 
                    ngcc-tw-transition-colors ngcc-tw-duration-200 ngcc-tw-ease-in-out ngcc-tw-focus:outline-none ngcc-tw-focus:ring-2 ngcc-tw-focus:ring-green-500 ngcc-tw-focus:ring-offset-2
                    ngcc-tw-cursor-pointer"
      data-checked=""
      data-headlessui-state="checked"
      data-testid="react-gdpr-cookie-consent-switch-button"
      id="headlessui-switch-:r0:"
      role="switch"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="ngcc-tw-pointer-events-none ngcc-tw-inline-block ngcc-tw-h-5 ngcc-tw-w-5 ngcc-tw-transform ngcc-tw-rounded-full ngcc-tw-bg-white ngcc-tw-shadow 
                    ngcc-tw-ring-0 ngcc-tw-transition ngcc-tw-duration-200 ngcc-tw-ease-in-out
                    ngcc-tw-translate-x-5"
      />
    </button>
  </div>
</div>
`;

exports[`SwitchButton should match the snapshot with screen reader label 1`] = `
<div>
  <div>
    <input
      hidden=""
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="hidden"
    />
    <input
      checked=""
      hidden=""
      name="Test Switch Button"
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="checkbox"
      value="on"
    />
    <button
      aria-checked="true"
      class="ngcc-tw-relative ngcc-tw-my-auto ngcc-tw-inline-flex ngcc-tw-h-6 ngcc-tw-w-11 ngcc-tw-flex-shrink-0 ngcc-tw-rounded-full ngcc-tw-border-2 ngcc-tw-border-transparent 
                    ngcc-tw-transition-colors ngcc-tw-duration-200 ngcc-tw-ease-in-out ngcc-tw-focus:outline-none ngcc-tw-focus:ring-2 ngcc-tw-focus:ring-green-500 ngcc-tw-focus:ring-offset-2
                    ngcc-tw-cursor-pointer"
      data-checked=""
      data-headlessui-state="checked"
      data-testid="react-gdpr-cookie-consent-switch-button"
      id="headlessui-switch-:r1:"
      role="switch"
      tabindex="0"
      type="button"
    >
      <span
        class="sr-only"
      >
        Test Label
      </span>
      <span
        aria-hidden="true"
        class="ngcc-tw-pointer-events-none ngcc-tw-inline-block ngcc-tw-h-5 ngcc-tw-w-5 ngcc-tw-transform ngcc-tw-rounded-full ngcc-tw-bg-white ngcc-tw-shadow 
                    ngcc-tw-ring-0 ngcc-tw-transition ngcc-tw-duration-200 ngcc-tw-ease-in-out
                    ngcc-tw-translate-x-5"
      />
    </button>
  </div>
</div>
`;
